tdf#108923 : Use display string for generating chart labels

Use display string for generating chart labels in
PivotTableDataProvider::collectPivotTableData as chart2
does not seem to use number format for labels although it
does for the data.

Added unit test PivotChartTest::testPivotChartWithDateRowField()
for this fix.

Change-Id: I668d4c9d7cf8bbb7e4213cce7a6e7cd4d7d07cbe
Reviewed-on: https://gerrit.libreoffice.org/39548
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>